# Ai-Maveli

./: .gitignore  database.py  main.py  monitor.py  pyproject.toml  requirements.txt
