[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.31.0",
    "gtts>=2.5.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pytelegrambotapi>=4.28.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.1",
]
